[optin/reporting/client] fix: table body overflow (#70)
* [optin/reporting/client] fix: table body overflow

* [optin/reporting/client] fix: loose of reactivity of the table component

--- a/optin/reporting/client/src/pages/Home/Home.scss
+++ b/optin/reporting/client/src/pages/Home/Home.scss
@@ -7,15 +7,25 @@
   background-position: center;
 }
 
+.mainContainerWrapper {
+  height: 100%;
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  justify-content: stretch;
+}
+
 .mainContainer {
   width: 100%;
   max-width: 600px;
-  padding: 20px 20px;
+  padding: 20px 0 0;
   margin: auto;
   position: relative;
   text-align: center;
 }
 
-.mainContainerWrapper {
-  position: relative;
+.tableContainer {
+  min-height: 0;
+  overflow-x: hidden;
+  flex: 1;
 }
